--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,24 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
     implementation 'com.google.apis:google-api-services-youtube:v3-rev193-1.23.0'
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.yydcdut.sdlv:sdlv:0.7.0'
     compile group: 'com.google.api-client', name: 'google-api-client-gson', version: '1.23.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+}
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '26.1.0'
+            }
+        }
+    }
 }
